--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-image: url(billeder/polaroid-04.svg);
+  background-image: url(billeder/polaroid_mig-07.svg);
   cursor: pointer;
 }
 
@@ -121,7 +121,7 @@
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-image: url(billeder/polaroid-04.svg);
+  background-image: url(billeder/polaroid4-09.svg);
   cursor: pointer;
 }
 
@@ -136,7 +136,7 @@
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-image: url(billeder/polaroid-04.svg);
+  background-image: url(billeder/polaroid3-08.svg);
   cursor: pointer;
 }
 
@@ -151,7 +151,7 @@
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-image: url(billeder/polaroid-04.svg);
+  background-image: url(billeder/polaroid_vicuras-07.svg);
   cursor: pointer;
 }
 
