--- a/tema.css
+++ b/tema.css
@@ -405,12 +405,110 @@ nav {
 }
 
 /* ----------- TEMA 5 ------------ */
-.grid_vicuras {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
+@media screen and (min-width: 800px) {
+  .grid_vicuras {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
 }
 .vicuras {
   margin-left: 50px;
-  height: 700px;
+  height: 800px;
   width: 350px;
+}
+
+.pink_box_tema5 {
+  background-color: rgb(253, 211, 218);
+  padding: 3%;
+  max-width: 85%;
+  border-radius: 25px;
+  margin-left: 30px;
+  margin-bottom: 40px;
+}
+
+.grå_boks_tema5 {
+  background-color: rgb(224, 222, 222);
+  text-align: center;
+  padding: 0.5rem;
+}
+
+.h3_premiere {
+  text-align: center;
+  margin-top: 0;
+}
+
+.hvid_box {
+  background-color: white;
+  padding: 3%;
+  max-width: 85%;
+  border-radius: 25px;
+  margin-left: 30px;
+  margin-bottom: 40px;
+  margin-top: 50px;
+  box-shadow: 0 12px 28px 0 lightgrey;
+  text-align: center;
+}
+.knap_pink {
+  background-color: rgb(253, 211, 218);
+  color: white;
+}
+
+/* ------------ MIG ------------ */
+.pink_box_mig {
+  background-color: rgb(253, 211, 218);
+  padding: 3%;
+  max-width: 85%;
+  border-radius: 25px;
+  margin-left: 30px;
+  margin-bottom: 40px;
+}
+
+.grå_box_mig {
+  background-color: rgb(224, 222, 222);
+  text-align: center;
+  padding: 0.5rem;
+}
+
+#myVideo {
+  position: absolute;
+  height: 500px;
+  margin: 20px;
+  border-radius: 20px;
+  z-index: -1;
+}
+
+.grid_kontakt {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 5%;
+  padding-top: 1%;
+  text-align: center;
+}
+/* --------------- FLYVEMASKINE --------------- */
+#flyvemaskine {
+  width: 9%;
+  aspect-ratio: 330/152;
+  position: absolute;
+  top: 47%;
+  left: 0%;
+}
+#flyvemaskine_sprite {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-image: url(billeder/flyvemaskine.svg);
+  cursor: pointer;
+  animation-name: flyv_kf;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-fill-mode: both;
+}
+@keyframes flyv_kf {
+  0% {
+    translate: -100% 0;
+  }
+  100% {
+    translate: 1500% 0;
+  }
 }
